# mcp-sap-demo

./: .gitignore  README.md  pyproject.toml
mcp_sap_demo/: sap_connector.py  server.py  test_tools.py
